test/sema/unknown-member-access-base.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:15: error: unknown identifier 'foo'
    var bar = foo.bar;
}
